<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">MeepStore</string>
    <string name="close">close</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="myapps">My Apps</string>
    <string name="media">Media</string>
    <string name="game">Game</string>
    <string name="apps">Apps</string>
    <string name="ebook">E-Book</string>
    <string name="coupon">Coupon</string>
    <string name="search">Search</string>
    <string name="testcoins">99</string>
    <string name="testcoins2">-99</string>
    <string name="somecoinsf">9999</string>
    <string name="somecoinsl">&#160;coins</string>
    <string name="item">Item</string>
    <string name="bar">bar</string>
    <string name="sort_category">Sort by Category</string>
    <string name="sort_category1">Sort by Category</string>
    <string name="category_all">All</string>
    <string name="category_books">Books</string>
    <string name="category_education">Education</string>
    <string name="category_entertainment">Entertainment</string>
    <string name="category_music">Music and Audio</string>
    <string name="category_photo">Photography</string>
    <string name="category_tools">Tools</string>
    <string name="category_video">Video</string>
    <string name="category_arcade">Arcade &amp; Action</string>
    <string name="category_brain">Brain &amp; Puzzle</string>
    <string name="category_cards">Cards</string>
    <string name="category_casual">Casual</string>
    <string name="category_racing">Racing</string>
    <string name="category_sport">Sport Game</string>
    <string name="sort_price">Sort by Price</string>
    <string name="price_all">All</string>
    <string name="price_free">Free</string>
    <string name="price_paid">Paid</string>
    <string name="price_others">Others</string>
    <string name="more">more</string>
    <string name="awaiting">Awaiting approval from your parents</string>
    <string name="waiting">Waiting</string>
    <string name="ebook_success">Success</string>
    <string name="not_enough_space">There is not enough memory space available on your MEEP! to download new content at the moment. Please make some space and try again!</string>
    <string name="results">Results</string>
    <string name="resultnum">10,000 results</string>
    <string name="install">Install</string>
    <string name="recoverall">Recover all</string>
    <string name="recover">Recover</string>
    <string name="uninstall">Uninstall</string>
    <string name="uninstall2">Delete</string>
    <string name="downloading">Downloading</string>
    <string name="blocked">Blocked</string>
    <string name="comingsoon">Coming Soon</string>
    <string name="free">Free</string>
    <string name="getit">Get it</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="description">Description</string>
    <string name="descriptiontest">null</string>
    <string name="exchange_title">Please enter the coupon code:</string>
    <string name="exchange_error_valid">Your coupon code is invalid!</string>
    <string name="exchange_error_used">The code has already been used.</string>
    <string name="exchange_title2">You can exchange:</string>
    <string name="redeem_title">You can redeem:</string>
    <string name="redeem_congratulation">The code is accepted. You can now redeem:\n %1$d more times.</string>
    <string name="exchange_congratulation">You have been credited:</string>
    <string name="exchange_info">%1$d coins.</string>
    <string name="login_title_fail">Login fail</string>
    <string name="login_title_msg">Uh Oh. You are not authorized to access the MEEP! Store for now.\nTo discover tons of new cool games and apps, ask your parents to grant you the access.</string>
    <string name="download_msg">Downloading %1$s</string>
    <string name="installing">Installing</string>
    <string name="payment_notenough">Not enough coins..</string>
    <string name="payment_confirm">Confirm the purchase of this item?</string>
    <string name="payment_google">This item is not directly available on the MEEP! store.\nYou must first get your parent\'s approval to download it.</string>
    <string name="payment_send">Send\nrequest</string>
    <string name="prelaoded">Preloaded apps</string>
    <string name="downloaded">Downloaded apps</string>
    <string name="allcontent">Recover all your preloaded content</string>
    <string name="allinfo">It will take a few minutes</string>
    <string name="nonetwork">No Internet connection! Make sure that your MEEP! is connected to a Wi-Fi network.</string>
    <string name="timeout">Sorry, the page cannot be loaded at the moment.\nPlease try again.</string>
    <string name="success">Your request has been sent.</string>
    <string name="pagenumber">Page %1$d of %2$d</string>
    <string name="pagenumber_original">Page 0 of 0</string>
    <string name="storage_full">Your storage is full! Please delete some files and try again.</string>
    <string name="badge_best_seller">BEST\nSELLER</string>
    <string name="badge_hot_item">HOT\nITEM</string>
    <string name="badge_sale">Sale</string>
    <string name="badge_accessory_onlu">Accessory\nOnly</string>
    <string name="recovery_process_started">The recovery process has started</string>
    <string name="recovery_process_unavailable">The recovery service is currently unavailable.</string>
    <string name="please_try_later">Please try again later.</string>
    <string name="later">Later</string>
    <string name="update">Update</string>
    <string name="download_error">Download Error</string>
    <string name="not_allowed_purchase_inapp_item">You are not allowed to purchase In-App Item, ask your parents to grant you the access.</string>
    <string name="item_not_found">Requested item not found.</string>
    <string name="have_insufficient_coins">You don\'t enough coins in your account.</string>
    <string name="in_app_purchase_for">In App Purchase for:</string>
    <string name="do_you_want_to_buy_this_feature">Do you want to buy this feature?</string>
    <string name="empty_search">Please input a name!</string>
    <string name="no_wifi_connection">No Wi-Fi connection! Please connect your MEEP! to a Wi-Fi network before to enjoy this content.</string>
    <string name="empty_coupon_code">Please enter the coupon code</string>
    <string name="not_allow_to_downlaod">You are not allowed to download items from the MEEP! Store. You can ask your parents to modify their parental settings for you.</string>
    <string name="this_word_is_blocked">This word is blocked by our bad word list. Please try a new search.</string>
    <string name="queuing">Queuing</string>
    <string name="queuing_for_downloading">Queuing for download</string>
    <string name="success_waiting_approval">Your request has been sent to your parents. Once they approve the purchase, the download of this item will automatically start on your MEEP! if a Wi-Fi connection is available.</string>
    <string name="download_success">%s is successfully downloaded.</string>
    <string name="download_failed">%s download failed.\nPlease download again on the MEEP! Store.</string>
    <string name="notification_message_coins_allocated">%1$s has allocated %2$.0f coins to you.</string>
    <string name="notification_message_coins_rejected">%1$s  has rejected the coins request.</string>
    <string name="notification_message_content_approved">%1$s  has approved your content request on %2$s .</string>
    <string name="notification_message_content_rejected">%1$s  has rejected your content request on %2$s .</string>
    <string name="success_request_coins">Your request has been sent. Please wait for your parents\' action.</string>
    <string name="success_start_download">Your request has been sent. The game will start downloading shortly...</string>
    <string name="media_not_available_title">Media Section will be opening soon</string>
    <string name="media_not_available_content">We are currently selecting content and getting ready for launch.</string>
    <string name="media_not_available_back">Back</string>
    <string name="result_one">%d result</string>
    <string name="result_other">%d results</string>

</resources>