<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@color/background_half_trans">
    <ImageButton 
        android:id="@+id/btnClose"
        style="@style/wrap_content"
        android:src="@drawable/btn_close"
        android:background="@null"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:padding="20dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/close"/>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	    android:layout_marginTop="30dp"
	    android:gravity="center_horizontal"
	    android:orientation="vertical">
	    <TextView 
	        style="@style/wrap_content"
	        android:layout_marginRight="40dp"
	        android:background="@drawable/meep_market_sortbar_green"
	        android:contentDescription="@string/sort_category"
	        android:text="@string/sort_category1"
	        android:gravity="center_vertical"
	        android:textColor="@color/text_dark_blue"
	        android:shadowColor="@color/text_white"
	        android:textStyle="bold"
	        android:textSize="30dp"
	        android:shadowRadius="2"
	        android:paddingTop="20dp"
	        android:layout_marginBottom="10dp"
	        android:paddingLeft="40dp"
	        />
	    <LinearLayout style="@style/wrap_content">
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            android:layout_marginTop="-10dp"
	            >
		        <ImageButton
		            android:paddingTop="15dp"
   		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryAll"
			        android:src="@drawable/btn_sort_category"
			        android:contentDescription="@string/category_all"
			        android:tag="0"
			        />
		        <TextView style="@style/text_sort"
		            android:layout_marginBottom="8dp"
					android:text="@string/category_all"
					android:layout_alignBottom="@id/categoryAll"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryArcade"
			        android:src="@drawable/btn_sort_action"
			        android:contentDescription="@string/category_arcade"
			        android:tag="1"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_arcade"
					android:layout_alignBottom="@id/categoryArcade"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryBrain"
			        android:src="@drawable/btn_sort_brain"
			        android:contentDescription="@string/category_brain"
			        android:tag="2"
			        />
		        <TextView style="@style/text_sort_support"
					android:text="@string/category_brain"
					android:layout_alignBottom="@id/categoryBrain"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryCards"
			        android:src="@drawable/btn_sort_cards"
			        android:contentDescription="@string/category_cards"
			        android:tag="3"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_cards"
					android:layout_alignBottom="@id/categoryCards"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryCasual"
			        android:src="@drawable/btn_sort_casual"
			        android:contentDescription="@string/category_casual"
			        android:tag="4"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_casual"
					android:layout_alignBottom="@id/categoryCasual"
					/>
	        </RelativeLayout>
	        
	    </LinearLayout>
	    <LinearLayout style="@style/wrap_content"
	        android:layout_marginTop="-44dp"
	        >
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryEducation"
			        android:src="@drawable/btn_sort_education"
			        android:contentDescription="@string/category_education"
			        android:tag="5"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_education"
					android:layout_alignBottom="@id/categoryEducation"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryEntertainment"
			        android:src="@drawable/btn_sort_entertainment"
			        android:contentDescription="@string/category_entertainment"
			        android:tag="6"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_entertainment"
					android:layout_alignBottom="@id/categoryEntertainment"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryMusic"
			        android:src="@drawable/btn_sort_music"
			        android:contentDescription="@string/category_music"
			        android:tag="7"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_music"
					android:layout_alignBottom="@id/categoryMusic"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categoryRacing"
			        android:src="@drawable/btn_sort_racing"
			        android:contentDescription="@string/category_racing"
			        android:tag="8"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_racing"
					android:layout_alignBottom="@id/categoryRacing"
					/>
	        </RelativeLayout>
	        <RelativeLayout 
	            style="@style/relatedlayout_sort"
	            >
		        <ImageButton 
		            style="@style/imagebutton_sort"
		            android:id="@+id/categorySport"
			        android:src="@drawable/btn_sort_sport"
			        android:background="@null"
			        android:contentDescription="@string/category_sport"
			        android:tag="9"
			        />
		        <TextView style="@style/text_sort"
					android:text="@string/category_sport"
					android:layout_alignBottom="@id/categorySport"
					/>
	        </RelativeLayout>
	    </LinearLayout>
    </LinearLayout>

</RelativeLayout>