<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@color/background_half_trans">
		<ImageView 
		    android:id="@+id/dialogbg"
		    style="@style/wrap_content"
		    android:src="@drawable/meep_market_mediapopup"
		     android:contentDescription="@string/app_name"
		     android:layout_centerHorizontal="true"
		     android:layout_marginTop="30dp"
		     />
		<FrameLayout
		    style="@style/wrap_content"
		    android:layout_alignLeft="@id/dialogbg"
		    android:layout_alignRight="@id/dialogbg"
		    android:layout_alignTop="@id/dialogbg"
		    android:layout_alignBottom="@id/dialogbg"
		    android:paddingLeft="125dp"
		    android:paddingRight="70dp"
		    >
		    <TextView
            style="@style/popup_title_text"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="90dp"
            android:text="@string/media_not_available_title" 
            android:maxLines="2"
            android:layout_height="60dp"
            android:layout_width="430dp"
            android:gravity="center"
            />
		     <ScrollView
		         android:layout_marginTop="200dp"
		         android:layout_width="fill_parent"
		         android:layout_height="fill_parent"
		         android:layout_marginBottom="150dp"
		         android:orientation="vertical"
		         android:scrollbars="none"
		         >
		         <TextView
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/media_not_available_content"
				    android:textSize="25dp"
				    android:textStyle="bold"
				    android:textColor="@color/text_dark_blue2"
				    android:gravity="center"
				    android:lineSpacingExtra="20dp"
				    />
		     </ScrollView>
		     <Button 
		         android:id="@+id/back"
		         style="@style/dialog_button"
		         android:layout_gravity="center_horizontal|bottom"
		         android:text="@string/media_not_available_back"
		         android:textColor="@color/text_light_blue_inapp" 
		         android:layout_marginBottom="80dp"/>
	     </FrameLayout>
        

</RelativeLayout>